fix: header full width on mobile

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -45,7 +45,9 @@
 
 @media (max-width: 700px) {
     .header {
-        padding: 0.75rem 0 0.75rem;
+        width: 100vw;
+        margin-left: -0.75rem;
+        padding: 0.75rem;
     }
 
     .title {
